--- a/client/src/app/components/notification/notification.component.html
+++ b/client/src/app/components/notification/notification.component.html
@@ -22,7 +22,7 @@
     <h5>Notifications</h5>  
     <ul class="list-group">
       <li class="list-group-item">
-        <img src="" alt="Notification Icon" class="notification-icon">
+        <i class="bi bi-bell-fill notification-icon"></i>
         <span class="unread">No notifications available.</span>
       </li>
     </ul>
