--- a/client/src/app/components/profile-list/profile-list.component.html
+++ b/client/src/app/components/profile-list/profile-list.component.html
@@ -1,32 +1,42 @@
-<div *ngIf="profiles.length > 0; else noProfiles" class="row" [ngStyle]="{'text-align': 'center'}">
-    <div class="col-sm-6 col-lg-4 m-15px-tb" *ngFor="let profile of displayedProfiles">
-      <div class="media box-shadow-only-hover hover-top border-all-1 border-color-gray p-15px">
-        <!-- <div class="icon-50 theme-bg white-color border-radius-50 d-inline-block">
-          <i class="number">{{ profile.id }}</i>
-        </div> -->
-        <div class="p-20px-l media-body">
-          <span class="theme2nd-bg white-color p-0px-tb p-10px-lr font-small border-radius-15">Full time</span>
-          <h6 class="m-5px-tb">{{ profile.objective }}</h6>
-          <p class="m-0px font-small">{{ profile.education }}</p>
-        </div>
-        <button type="button" class="btn btn-primary" (click)="viewProfile(profile.id)">View profile</button>
+<!-- Hiển thị danh sách profiles -->
+<div *ngIf="profiles.length > 0; else noProfiles" class="row gy-4 justify-content-center text-center">
+
+  <div class="col-sm-6 col-lg-4" *ngFor="let profile of displayedProfiles">
+    <div class="card h-100 shadow-sm border-0 hover-top">
+      <div class="card-body">
+        <!-- Optional badge -->
+        <span class="badge bg-primary mb-2">Full time</span>
+
+        <!-- Nội dung chính -->
+        <h5 class="card-title">{{ profile.objective }}</h5>
+        <p class="card-text text-muted">{{ profile.education }}</p>
+
+        <button type="button" class="btn btn-outline-primary mt-3" (click)="viewProfile(profile.id)">
+          View Profile
+        </button>
       </div>
-    </div>
-  
-    <div class="d-flex justify-content-end">
-      <button class="nav-button prev" (click)="prevPage()" [disabled]="currentPage === 0"><</button>
-      <button class="nav-button next" (click)="nextPage()" [disabled]="currentPage >= totalPages() - 1">></button>
     </div>
   </div>
-  
-  <ng-template #noProfiles>
-    <div class="not-found-container">
-      <div class="not-found-content">
-        <h1>Oops!</h1>
-        <h2>We couldn't find what you're looking for.</h2>
-        <p>It seems that the page you're searching for doesn't exist or has been moved. Try searching with different keywords or explore other sections.</p>
-        <a routerLink="/home" routerLinkActive="router-link-active" class="home-button">Go to Homepage</a>
-      </div>
-    </div>
-  </ng-template>
-  
+
+  <!-- Pagination -->
+  <div class="col-12 d-flex justify-content-end mt-4">
+    <button class="btn btn-outline-secondary me-2" (click)="prevPage()" [disabled]="currentPage === 0">
+      <i class="bi bi-chevron-left"></i>
+    </button>
+    <button class="btn btn-outline-secondary" (click)="nextPage()" [disabled]="currentPage >= totalPages() - 1">
+      <i class="bi bi-chevron-right"></i>
+    </button>
+  </div>
+</div>
+
+<!-- Template khi không có dữ liệu -->
+<ng-template #noProfiles>
+  <div class="text-center py-5">
+    <h1 class="display-4 text-danger mb-3">Oops!</h1>
+    <h4 class="mb-3">We couldn't find any profiles.</h4>
+    <p class="text-muted mb-4">
+      It seems that there are no profiles available. Please check back later or try other filters.
+    </p>
+    <a routerLink="/home" class="btn btn-primary">Go to Homepage</a>
+  </div>
+</ng-template>
