--- a/client/src/app/components/project-list/project-list.component.html
+++ b/client/src/app/components/project-list/project-list.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="projects.length > 0; else noProject" class="row mt-5">
       <button class="btn btn-primary" (click)="showEditForm(null)">Add project</button>
       <ng-container *ngFor="let project of projects">
-          <ng-container *ngIf="(this.idProfile && project.display) || (this.idProfile == null)">
+          <ng-container *ngIf="(this.idProfile) || (this.idProfile == null)">
               <div class="col-lg-4 col-md-6 mb-4">
                   <div class="serv-cove shadow-md rounded bg-white text-center p-4 d-flex flex-column align-items-center">
                       <i class="bi fs-1 bi-boxes mb-3"></i>
