--- a/client/src/app/components/create-profile/create-profile.component.html
+++ b/client/src/app/components/create-profile/create-profile.component.html
@@ -65,7 +65,7 @@
           </div>
         </div>
 
-        <div class="form_buttons d-flex justify-content-between">
+        <div class="form_buttons d-flex justify-content-between gap-2">
           <button type="submit" id="submitBtn" class="btn btn-primary">Save</button>
           <button type="button" (click)="onClose()" class="btn btn-secondary">Cancel</button>
         </div>
