--- a/client/src/app/layouts/company-list/company-list.component.html
+++ b/client/src/app/layouts/company-list/company-list.component.html
@@ -164,7 +164,7 @@
         <label>Preview Image</label><br>
         <img *ngIf="previewUrl" [src]="previewUrl" alt="Preview" style="max-height: 150px;">
       </div>
-      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="submit" class="btn btn-primary me-2">Save</button>
       <button type="button" class="btn btn-secondary" (click)="closeModal()">Cancel</button>
     </form>
   </div>
