--- a/client/src/app/components/post-project/post-project.component.html
+++ b/client/src/app/components/post-project/post-project.component.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="form_buttons d-flex justify-content-end gap-3">
-                    <button type="submit" id="submitBtn" class="btn btn-primary">Save</button>
+                    <button type="submit" id="submitBtn" class="btn btn-primary me-2">Save</button>
                     <button type="button" (click)="onClose()" class="btn btn-secondary">Cancel</button>
                 </div>
             </form>
